Added test line to js/html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	</head>
 	<body>
 		<h1>Welcome to the RPG Management System</h1>
+		<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
 		
+		<p id="test"></p>
+		
+		<script src="http://code.jquery.com/jquery-4.5.1.min.js">
 		<script src="js/main.js">
 	</body>
 </html>
