--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>RPG Management System</title>
+		<link rel = "stylesheet" href = "RPG.css">
 	</head>
 	<body>
-		<h1>Welcome to the RPG Management System</h1>
+		<h1 id = "Home_Page_Title">Welcome to the RPG Management System</h1>
 	</body>
 </html>
