--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>RPG Management System</title>
 		<link rel = "stylesheet" href = "RPG.css">
+
+		<script src="jquery-3.6.0.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<h1>Welcome to the RPG Management System</h1>
+		
 		<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
-		
-		<p id="test"></p>
-		
-		<script src="http://code.jquery.com/jquery-4.5.1.min.js"/>
-		<script src="js/main.js"></script>
+
 		<h1 id = "Home_Page_Title">Welcome to the RPG Management System</h1>
+
+		<p id="test"></p>
+
 	</body>
 </html>
