Committing to rebase

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		
 		<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
 
+		<script src="http://code.jquery.com/jquery-4.5.1.min.js"/>
+		<script rel = "text/javascript" src="js/main.js"></script>
 		<h1 id = "Home_Page_Title">Welcome to the RPG Management System</h1>
 
 		<p id="test"></p>
