added folders back to js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>RPG Management System</title>
 		<link rel = "stylesheet" href = "RPG.css">
 
-		<script src="jquery-3.6.0.js"></script>
-		<script src="main.js"></script>
+		<script src="js/jquery-3.6.0.js"></script>
+		<script src="js/main.js"></script>
 	</head>
 	<body>
 		<h1>Welcome to the RPG Management System</h1>
