Added Background Image and Added Drop Down Selection

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 		<script src="js/main.js"></script>
 	</head>
 	<body>
-		<h1 id = "Home_Page_Title">Welcome to the RPG Management System</h1>
+		<h1 id = "Home_Page_Title">RPG Management System</h1>
 		
-		<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
+		<label for="drop_menu" id = "drop_menu">Choose a Character Class</label>
+		<select for="drop_menu_2" id = "drop_menu_2">
+			<option value = "knight">Knight</option>
+			<option value = "mage">Mage</option>
+			<option value = "cleric">Cleric</option>
+			<option value = "Thief">Thief</option>
+		</select>
+		
 
-<<<<<<< HEAD
-		<script src="http://code.jquery.com/jquery-4.5.1.min.js"/>
-		<script rel = "text/javascript" src="js/main.js"></script>
-		<h1 id = "Home_Page_Title">Welcome to the RPG Management System</h1>
-
-=======
->>>>>>> a7c69e4e5c2a3a83b782de66aabb962a6033b669
+		<button id="button1" type="button" onclick="testFunc()">Click me to display Date and Time.</button>
 		<p id="test"></p>
 
 	</body>
