Added testing div

--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>RPG Management System</title>
-		<link rel = "stylesheet" href = "RPG.css">
+		<link rel="stylesheet" href="RPG.css">
 
 		<script src="js/jquery-3.6.0.js"></script>
 		<script src="js/main.js"></script>
 	</head>
 	<body>
-		<h1 id = "Home_Page_Title">Welcome to the RPG Management System</h1>
+		<h1 id="Home_Page_Title">Welcome to the RPG Management System</h1>
 		
-		<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
-
-		<p id="test"></p>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		<button type="button" onclick="switchHidden()"> Show button</button>
+		
+		<div id="myButton">
+			<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
+			<p id="test"></p>
+		</div>
 
 	</body>
 </html>
