--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
 			<option value="thief">Thief</option>
 		</select>
 		
+		<button type="button" id="button1" onclick="success()">Enter</button>
+		<br/><br/>
+		<button id="myButton" type="button" onclick="switchHidden()">Show Date Button</button>
 		
-		<button type="button" onclick="switchHidden()"> Show button</button>
-		
-		<div id="myButton">
+		<div id="myButtonDiv">
 			<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
 			<p id="test"></p>
 		</div>
+
+		<img id="success" src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg" width="100%" height="500">
 
 	</body>
 </html>
