--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 			<p id="test"></p>
 		</div>
 
-		<img id="success" src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg" width="100%" height="500">
+		<img id="success"
+			 src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg"
+			 width="100%" height="500">
 
 	</body>
 </html>
