Changed DropDown to Show Images

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h1 id="Home_Page_Title">RPG Management System</h1>
 		
 		<label for="drop_menu" id="drop_menu">Choose a Character Class</label>
+
 		<select for="drop_menu_2" id="drop_menu_2">
 			<option value="knight">Knight</option>
 			<option value="mage">Mage</option>
@@ -34,9 +35,12 @@
 			<p id="test"></p>
 		</div>
 
+		<div id = "fill_image" style = background:transparent;></div>
+
+		<!--
 		<img id="success"
 			 src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg"
 			 width="100%" height="500">
-
+			--->
 	</body>
 </html>
