--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 	<head>
 		<meta charset="UTF-8">
@@ -12,7 +12,7 @@
 		<script src="js/fileInput.js"></script>
 	</head>
 	<body>
-		<h1 id="Home_Page_Title">RPG Management System</h1>
+		<h1 style="color:white" id="Home_Page_Title">RPG Management System</h1>
 <!--
 		<div id="success_image">
 			<img id="success"
