--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
 		
 		<button type="button" id="button1" onclick="success()">Enter</button>
 		<br/><br/>
+		<!--
 		<img id="success"
 			 src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg"
+			 width="270" height="150">
+		-->
+		<img id="success"
+			 src="https://cdn.discordapp.com/attachments/937864963433832538/940375695530549278/maxresdefault.jpg"
 			 width="270" height="150">
 		<button id="myButton" clear="right" type="button" onclick="switchHidden()">Show Date Button</button>
 		<br/><br/>
