--- a/index.html
+++ b/index.html
@@ -56,4 +56,8 @@
 
 
 	</body>
+	<footer>
+		<h3>Goodbye World</h3>
+		<p>Authors: Ben Weatherill, ...</p> <!-- Add your names here-->
+	</footer>
 </html>
