Added the rest of our names to the footer.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
 	</body>
 	<footer>
 		<h3>Goodbye World</h3>
-		<p>Authors: Ben Weatherill, ...</p> <!-- Add your names here-->
+		<p>Authors: Ben Weatherill, Andrew Barnett, Andrew Vinci, and Justin Willis</p> <!-- Add your names here-->
 	</footer>
 </html>
