made various changes, added more to character creation page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html" lang="english">
+<html xmlns="http://www.w3.org/1999/html">
 	<head>
 		<meta charset="UTF-8">
 		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
@@ -10,7 +10,6 @@
 		<script src="js/jquery-3.6.0.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/fileInput.js"></script>
-		<script src="js/backend_dev.js"></script>
 	</head>
 
 <!--Start of Body-->
@@ -47,10 +46,7 @@
 			<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
 			<p id="test"></p>
 		</div>
-
-		<!-- Save Button -->
-		<button id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
-		<a href="" id="a">Click here to download the Player</a>
+		
 
 		<!-- Character Container -->
 
@@ -112,8 +108,6 @@
 		</div>
 
 		<div id="fill_image" style = background:transparent;></div>
-
-
 
 	</body>
 
