Changed download button

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 		</div>
 
 		<!-- Save Button -->
-		<button id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
-		<a href="" id="a">Click here to download the Player</a>
+		<button class="save" id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
+		<a href="" class="save" id="a" onclick="revertDownload();">Download</a>
 
 		<!-- Character Container -->
 
