--- a/index.html
+++ b/index.html
@@ -35,22 +35,16 @@
 		<br/><br/>
 		<img id="success" src="https://cdn.discordapp.com/attachments/937864963433832538/940375695530549278/maxresdefault.jpg" width="270" height="150">
 
-		<button id="myButton" clear="right" type="button" onclick="switchHidden()">Show Date Button</button>
 		<br/><br/>
 
 		<form id="inputForm">
 			<input id="input" type="file"/>
 			<button id="inputUpload" type="submit" onclick="console.log('Debug Output: Upload Button')">Upload</button>
 		</form>
-		
-		<div id="myButtonDiv">
-			<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
-			<p id="test"></p>
-		</div>
 
 		<!-- Save Button -->
-		<button id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
-		<a href="" id="a">Click here to download the Player</a>
+		<button class="save" id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
+		<a href="" class="save" id="a" onclick="revertDownload();">Download</a>
 
 		<!-- Character Container -->
 
@@ -79,6 +73,7 @@
 		<div id = "items" class = "tab_content">
 		
 		</div>
+
 		 
 		<!-- Attribute Table -->
 
@@ -112,7 +107,6 @@
 		</div>
 
 		<div id="fill_image" style = background:transparent;></div>
-
 
 
 	</body>
