--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
+<html xmlns="http://www.w3.org/1999/html" lang="english">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 		<title>RPG Management System</title>
 		<link rel="stylesheet" href="RPG.css">
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
@@ -10,33 +10,128 @@
 		<script src="js/jquery-3.6.0.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/fileInput.js"></script>
+		<script src="js/backend_dev.js"></script>
 	</head>
-	<body>
+
+<!--Start of Body-->
+
+	<body style="overflow-x: hidden">
 		<h1 id="Home_Page_Title">RPG Management System</h1>
-		
-		<label for="drop_menu" id="drop_menu">Choose a Character Class</label>
-		<select for="drop_menu_2" id="drop_menu_2">
+
+		<!--Character Drop Down Menu-->
+
+		<label id="drop_menu">Choose a Character Class</label>
+
+		<select id="drop_menu_2">
 			<option value="knight">Knight</option>
 			<option value="mage">Mage</option>
 			<option value="cleric">Cleric</option>
 			<option value="thief">Thief</option>
+			<option value="archer">Archer</option>
+			<option value="darkmage">Dark Mage</option>
 		</select>
 		
-		<button type="button" id="button1" onclick="success()">Enter</button>
+		<button type="button" id="button1" onclick="success(); characterMenu(); createTable();">Enter</button>
 		<br/><br/>
-		<button id="myButton" type="button" onclick="switchHidden()">Show Date Button</button>
-		<input type="file" id="input">
-		<button id="inputUpload" type="submit" onclick="console.log('Debug Output: Upload Button')">Upload</button>
-		</input>
-		
-		<div id="myButtonDiv">
-			<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
-			<p id="test"></p>
+		<img id="success" src="https://cdn.discordapp.com/attachments/937864963433832538/940375695530549278/maxresdefault.jpg" width="270" height="150">
+
+		<br/><br/>
+
+		<form id="inputForm">
+			<input id="input" type="file"/>
+			<button id="inputUpload" type="submit" onclick="console.log('Debug Output: Upload Button')">Upload</button>
+		</form>
+
+		<!-- Save Button -->
+		<button class="save" id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
+		<a href="" class="save" id="a" onclick="revertDownload();">Download</a>
+
+		<!-- Character Container -->
+
+	<div id = "character_container">
+
+		<div id = "character_name">Aragorn</div>
+
+		<!-- Links to Tabs -->
+
+		<div class = "tab">
+			<button class = "tab_link" onclick = "openCharacter(event, 'weapons')">Weapons</button>
+			<button class = "tab_link" onclick = "openCharacter(event, 'skills')">Skills</button>
+			<button class = "tab_link" onclick = "openCharacter(event, 'items')">Items</button>
 		</div>
 
-		<img id="success"
-			 src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg"
-			 width="100%" height="500">
+		<!--Content of Tabs -->
+
+		<div id = "weapons" class = "tab_content">
+		
+		</div>
+
+		<div id = "skills" class = "tab_content">
+			
+		</div>
+
+		<div id = "items" class = "tab_content">
+		
+		</div>
+
+		 
+		<!-- Attribute Table -->
+
+		<table id = "attribute_table">
+			<tr>
+				<th id = "attribute">Attributes</th>
+				<th id = "stats">Statistics</th>
+			</tr>
+			<tr>
+				<th id = "hp">HP</th>
+				<th id = "hp_stat"></th>
+			</tr>
+			<tr>
+				<th id = "attack">Attack</th>
+				<th id = "attack_stat"></th>
+			</tr>
+			<tr>
+				<th id = "defense">Defense</th>
+				<th id = "defense_stat"></th>
+			</tr>
+			<tr>
+				<th id = "strength">Strength</th>
+				<th id = "strength_stat"></th>
+			</tr>
+			<tr>
+				<th id = "magic">Magic</th>
+				<th id = "magic_stat"></th>
+			</tr>
+			</table>
+
+		</div>
+
+		<div id="fill_image" style = background:transparent;></div>
+
 
 	</body>
+
+<!---End of Body. Start of Footer-->
+
+	<footer>
+		<h3>Website Created By:</h3>
+		<p>Ben Weatherill, Andrew Barnett, Andrew Vinci, and Justin Willis</p> <!-- Add your names here-->
+	</footer>
+
 </html>
+
+
+
+<!--
+		<div id="success_image">
+			<img id="success"
+				 src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg"
+				 width="60%" height="200">
+		</div>
+-->
+
+		<!--
+		<img id="success"
+			 src="https://thumbs.dreamstime.com/z/success-word-written-wood-block-text-wooden-table-your-desing-top-view-concept-203132070.jpg"
+			 width="270" height="150">
+		-->
