made the attribute table able to be edited, still working on changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<button type="button" onclick="testFunc()">Click me to display Date and Time.</button>
 			<p id="test"></p>
 		</div>
-		
+
 
 		<!-- Character Container -->
 
@@ -85,25 +85,27 @@
 			</tr>
 			<tr>
 				<th id = "hp">HP</th>
-				<th id = "hp_stat"></th>
+				<th id = "hp_stat" class = "single_line" contenteditable="true"></th>
 			</tr>
 			<tr>
 				<th id = "attack">Attack</th>
-				<th id = "attack_stat"></th>
+				<th id = "attack_stat" class = "single_line" contenteditable="true"></th>
 			</tr>
 			<tr>
 				<th id = "defense">Defense</th>
-				<th id = "defense_stat"></th>
+				<th id = "defense_stat" class = "single_line" contenteditable="true"></th>
 			</tr>
 			<tr>
 				<th id = "strength">Strength</th>
-				<th id = "strength_stat"></th>
+				<th id = "strength_stat" class = "single_line" contenteditable="true"></th>
 			</tr>
 			<tr>
 				<th id = "magic">Magic</th>
-				<th id = "magic_stat"></th>
+				<th id = "magic_stat" class = "single_line" contenteditable="true"></th>
 			</tr>
 			</table>
+
+			<button id = "attribute_table_button">Submit</button>
 
 		</div>
 
