--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<option value="darkmage">Dark Mage</option>
 		</select>
 		
-		<button type="button" id="button1" onclick="success(); characterMenu(); createTable();">Enter</button>
+		<button type="button" id="button1" onclick="success(); characterMenu(); createTable(); gatherDataTest();">Enter</button>
 		<br/><br/>
 		<img id="success" src="https://cdn.discordapp.com/attachments/937864963433832538/940375695530549278/maxresdefault.jpg" width="270" height="150">
 
