--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 		<div id = "items" class = "tab_content">
 		
 		</div>
+		 
+		<!-- Attribute Table -->
 
 		 
 		<!-- Attribute Table -->
@@ -107,7 +109,6 @@
 		</div>
 
 		<div id="fill_image" style = background:transparent;></div>
-
 
 	</body>
 
