--- a/index.html
+++ b/index.html
@@ -73,42 +73,41 @@
 		<div id = "items" class = "tab_content">
 		
 		</div>
-		 
-		<!-- Attribute Table -->
-
 
 		<!-- Attribute Table -->
+		<form onsubmit="gatherDataTest(); return false">
+			<table id = "attribute_table">
+				<tr>
+					<th id = "attribute">Attributes</th>
+					<th id = "stats">Statistics</th>
+				</tr>
+					<tr>
+						<th id = "hp">HP</th>
+						<th type="submit" id = "hp_stat" class = "single_line" contenteditable="true">0</th>
+						<!-- <input id="inputformXX" type="submit"/> -->
+					</tr>
+					<tr>
+						<th id = "attack">Attack</th>
+						<th id = "attack_stat" class = "single_line" contenteditable="true">0</th>
+					</tr>
+					<tr>
+						<th id = "defense">Defense</th>
+						<th id = "defense_stat" class = "single_line" contenteditable="true">0</th>
+					</tr>
+					<tr>
+						<th id = "strength">Strength</th>
+						<th id = "strength_stat" class = "single_line" contenteditable="true">0</th>
+					</tr>
+					<tr>
+						<th id = "magic">Magic</th>
+						<th id = "magic_stat" class = "single_line" contenteditable="true">0</th>
+					</tr>
 
-		<table id = "attribute_table">
-			<tr>
-				<th id = "attribute">Attributes</th>
-				<th id = "stats">Statistics</th>
-			</tr>
-			<tr>
-				<th id = "hp">HP</th>
-				<th id = "hp_stat" class = "single_line" contenteditable="true"></th>
-			</tr>
-			<tr>
-				<th id = "attack">Attack</th>
-				<th id = "attack_stat" class = "single_line" contenteditable="true"></th>
-			</tr>
-			<tr>
-				<th id = "defense">Defense</th>
-				<th id = "defense_stat" class = "single_line" contenteditable="true"></th>
-			</tr>
-			<tr>
-				<th id = "strength">Strength</th>
-				<th id = "strength_stat" class = "single_line" contenteditable="true"></th>
-			</tr>
-			<tr>
-				<th id = "magic">Magic</th>
-				<th id = "magic_stat" class = "single_line" contenteditable="true"></th>
-			</tr>
 			</table>
 
-			<button id = "attribute_table_button">Submit</button>
-
-		</div>
+			<button id="attribute_table_button" onclick="gatherDataTest(); return false">Submit</button>
+		</form>
+	</div>
 
 		<div id="fill_image" style = background:transparent;></div>
 
