added buttons to the statistics table, also added class title for each character.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 		<div id = "character_name">Aragorn</div>
 
+		<div id = "character_class"></div>
+
 		<!-- Links to Tabs -->
 
 		<div class = "tab">
@@ -84,28 +86,28 @@
 				<th id = "stats">Statistics</th>
 			</tr>
 			<tr>
-				<th id = "hp">HP</th>
-				<th id = "hp_stat" class = "single_line" contenteditable="true"></th>
+				<td id = "hp"><input class = 'button_class' type = 'button' value = 'HP' onclick = "editHP()"/></td>
+				<td id = "hp_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<th id = "attack">Attack</th>
-				<th id = "attack_stat" class = "single_line" contenteditable="true"></th>
+				<td id = "attack"><input class = 'button_class' type = 'button' value = 'Attack' onclick = "editAttack()"/></td>
+				<td id = "attack_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<th id = "defense">Defense</th>
-				<th id = "defense_stat" class = "single_line" contenteditable="true"></th>
+				<td id = "defense"><input class = 'button_class' type = 'button' value =' Defense' onclick = "editDefense()"/></td>
+				<td id = "defense_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<th id = "strength">Strength</th>
-				<th id = "strength_stat" class = "single_line" contenteditable="true"></th>
+				<td id = "strength"><input class = 'button_class' type = 'button' value = 'Strength' onclick = "editStrength()"/></td>
+				<td id = "strength_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<th id = "magic">Magic</th>
-				<th id = "magic_stat" class = "single_line" contenteditable="true"></th>
+				<td id = "magic"><input class = 'button_class' type='button' value='Magic' onclick = "editMagic()"/></td>
+				<td id = "magic_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			</table>
 
-			<button id = "attribute_table_button">Submit</button>
+			<!---<button id = "attribute_table_button">Submit</button>--->
 
 		</div>
 
