changed dark mode to allow for switching between different modes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 		<div id = "dark_mode">
-			<button id = "dark_mode_button" onclick = "dark_mode()">Dark Mode</button>
+			<button id = "dark_mode_button" value = "Dark Mode" onclick = "dark_mode()">Dark Mode</button>
 		</div>
 
 		<!--
