Some work on download from before break

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 	<footer>
 		<h3>Website Created By:</h3>
-		<p>Ben Weatherill, Andrew Barnett, Andrew Vinci, and Justin Willis</p> <!-- Add your names here-->
+		<p>Ben Weatherill, Andrew Barnett, Andrew Vinci, and Justin Willis</p>
 	</footer>
 
 </html>
