Some improvements to the stats fields

--- a/index.html
+++ b/index.html
@@ -86,23 +86,23 @@
 				<th id = "stats">Statistics</th>
 			</tr>
 			<tr>
-				<td id = "hp"><input class = 'button_class' type = 'button' value = 'HP' onclick = "editHP();"/></td>
+				<td id = "hp"><input class = 'button_class' type = 'button' value = 'HP' onclick = "editField('hp_stat');"/></td>
 				<td id = "hp_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<td id = "attack"><input class = 'button_class' type = 'button' value = 'Attack' onclick = "editAttack();"/></td>
+				<td id = "attack"><input class = 'button_class' type = 'button' value = 'Attack' onclick = "editField('attack_stat');"/></td>
 				<td id = "attack_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<td id = "defense"><input class = 'button_class' type = 'button' value =' Defense' onclick = "editDefense();"/></td>
+				<td id = "defense"><input class = 'button_class' type = 'button' value =' Defense' onclick = "editField('defense_stat');"/></td>
 				<td id = "defense_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<td id = "strength"><input class = 'button_class' type = 'button' value = 'Strength' onclick = "editStrength();"/></td>
+				<td id = "strength"><input class = 'button_class' type = 'button' value = 'Strength' onclick = "editField('strength_stat');"/></td>
 				<td id = "strength_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			<tr>
-				<td id = "magic"><input class = 'button_class' type='button' value='Magic' onclick = "editMagic();"/></td>
+				<td id = "magic"><input class = "button_class" type='button' value='Magic' onclick="editField('magic_stat');" /></td>
 				<td id = "magic_stat" class = "single_line" contenteditable="false">0</td>
 			</tr>
 			</table>
