Added grid for various items.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
 		
 		</div>
 
+		<div id = "weapons_select" class = "tab_select">
+			<div class="grid_item">1</div>
+			<div class="grid_item">2</div>
+			<div class="grid_item">3</div>  
+			<div class="grid_item">4</div>
+			<div class="grid_item">5</div>  
+			<div class="grid_item">6</div>
+			<div class="grid_item">7</div>  
+			<div class="grid_item">8</div>
+		</div>
+
 		<div id = "skills" class = "tab_content">
 			
 		</div>
@@ -98,6 +109,8 @@
 		<div id = "items" class = "tab_content">
 		
 		</div>
+
+		
 
 		<!-- Attribute Table -->
 
