--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 		</div>
 
 		<div id = "inventory_select" class = "tab_select">
-			<div id = item_1 class="grid_item" ondrop="drop(event)" ondragenter="dragEnter(event)" ondragleave="dragLeave(event)" ondragover="allowDrop(event)">1</div>
-			<div id = item_2 class="grid_item">2</div>
-			<div id = item_3 class="grid_item">3</div>  
-			<div id = item_4 class="grid_item">4</div>
-			<div id = item_5 class="grid_item">5</div>  
-			<div id = item_6 class="grid_item">6</div>
-			<div id = item_7 class="grid_item">7</div>  
-			<div id = item_8 class="grid_item">8</div>
+			<div id = item_1 class="grid_item" ondrop="drop(event)" ondragenter="dragEnter(event)" ondragleave="dragLeave(event)" ondragover="allowDrop(event)"></div>
+			<div id = item_2 class="grid_item"></div>
+			<div id = item_3 class="grid_item"></div>  
+			<div id = item_4 class="grid_item"></div>
+			<div id = item_5 class="grid_item"></div>  
+			<div id = item_6 class="grid_item"></div>
+			<div id = item_7 class="grid_item"></div>  
+			<div id = item_8 class="grid_item"></div>
 		</div>
 
 		<div id = "skills" class = "tab_content">
