Updated to add a cancel button for the download

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 				<!-- Save Button -->
 				<button class="save" id="saveButton" type="button" onclick="download('test', 'playerSave.txt.');">Save Player</button>
 				<a href="" class="save" id="a" onclick="revertDownload();">Download</a>
+				<button class="save" id="cancel" type="button" onclick="cancelDownload();">Cancel Save</button>
 			</div>
 
 			<div id = "dark_mode">
