small changes here and there

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<!---<button id="myButton" clear="right" type="button" onclick="switchHidden()">Show Date Button</button>--->
 
 			<form id="inputForm">
-				<input id="input" type="file"/>
-				<button id="inputUpload" type="submit" onclick="console.log('Debug Output: Upload Button')">Upload</button>
+				<input id="input" type="file" disabled/>
+				<button id="inputUpload" type="submit" onclick="upload();console.log('Debug Output: Upload Button')" disabled>Upload</button>
 			</form>
 
 			<div id = "save">
